# work_in_mac

./: .gitignore  .gitignore.save  README.md  widget.py
Data/.config/: .black  .isort.cfg  mypy.ini
external_api/: api.py
pythonproject/: .gitignore  generators.py  pyproject.toml  widget.py
pythonproject/pythonproject/: decorators.py  masks.py  processing.py  widget.py
pythonproject/tests/: conftest.py  test_masks.py  test_utils.py  test_widget.py
tests/: test_api.py  test_decorators.py  test_generators.py  test_log.txt  test_processing.py
utils/: utils.py
